@@ -73,3 +73,27 @@ class TestProposalSerialization(IntegrationTestCase):
              u'response_type': u'submitted',
              u'text': u''},
             responses[0])
+
+    @browsing
+    def test_decided_proposal_contains_meeting_decision_number_and_excerpt(self, browser):
+        self.login(self.meeting_user, browser=browser)
+        browser.open(self.decided_proposal, method="GET", headers=self.api_headers)
+
+        self.assertIn(u'meeting', browser.json)
+        self.assertDictEqual(
+            {u'@id': self.decided_meeting.absolute_url(),
+             u'title': self.decided_meeting.get_title()},
+            browser.json[u'meeting'])
+
+        self.assertIn(u'decision_number', browser.json)
+        self.assertEqual(u'2016 / 1', browser.json[u'decision_number'])
+
+        excerpt = self.decided_proposal.get_excerpt()
+        self.assertDictEqual(
+            {u'@id': excerpt.absolute_url(),
+             u'@type': u'opengever.document.document',
+             u'description': u'',
+             u'is_leafnode': None,
+             u'review_state': u'document-state-draft',
+             u'title': excerpt.title},
+            browser.json[u'excerpt'])
